<resources>
    <string name="app_name">rocket-launch</string>

    <!--Bottom Navigation Titles-->
    <string name="title_home">Home</string>
    <string name="title_user_profile">User Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_create_events">Create Event</string>
    <string name="title_user_events">User Events</string>

    <!--Activity Header Titles-->
    <string name="user_profile_header">User Profile</string>
    <string name="user_events_header">My Events</string>
    <string name="notifications_header">Notifications</string>
    <string name="main_header">MainActivity</string>
    <string name="create_event_header">Created Events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="by_team_rocket">By Team Rocket</string>
    <string name="get_started">Create User</string>
    <string name="cmput301_event_lottery_system_application">CMPUT301 Event Lottery System Application\n</string>


    <!-- Notification Channel Strings -->
    <string name="channel_name">Event Notifications</string> <!-- Added -->
    <string name="channel_description">Notifications for actions related to event creation and management.</string>
    <string name="startup_page">Startup page</string>
    <string name="enter_user_information">Enter User Information</string> <!-- Added -->

</resources>